--- a/demo/test.html
+++ b/demo/test.html
@@ -2,7 +2,7 @@
  * @Author: junhui
  * @Date: 2023-07-10 20:06:43
  * @LastEditors: junhui
- * @LastEditTime: 2023-07-13 11:50:50
+ * @LastEditTime: 2023-07-13 14:29:46
  * @FilePath: \jsqrcode\demo\test.html
  * @Description: 
 -->
@@ -33,7 +33,7 @@
 <script type="text/javascript" src="databr.js"></script> -->
 
 <!-- <script type="text/javascript" src="./llqrcode.js"></script> -->
-<script type="text/javascript" src="../lib/zqrcode.js"></script>
+<script type="text/javascript" src="../lib/jsqrcode.js"></script>
 <!-- <script type="text/javascript" src="../src/qrcode.js" type="module"></script> -->
 </head>
 
@@ -41,16 +41,14 @@
     <div class="container"><input type="file" multiple id="input" /</div>
 </body>
 <script type="text/javascript">
-	console.log(zqrcode)
+	console.log(jsqrcode)
 	let input = document.getElementById('input')
 	input.addEventListener('change', function(e) {
-		console.log('load')
 		let file = e.target.files[0]
-		// console.log(file)
 		let reader = new FileReader();
     	reader.readAsDataURL(file);
 		reader.onload = function () {
-			let a = zqrcode.decode(reader.result, function(data) {
+			let a = jsqrcode.decode(reader.result, function(data) {
 				console.log(data)
 			})
 		}
